# CppBikes

./: .gitignore  AbstractContainer.cpp  AbstractContainer.h  AbstractLine.cpp  AbstractLine.h  AdjacentObject.h  ArrayBikes.h  BackupObject.h  BasicGeography.cpp  BasicGeography.h  BasicGeometry.cpp  BasicGeometry.h  BasicMath.cpp  BasicMath.h  Bikes.cpp  Bikes.h  Bikes.w  BikesStream.cpp  BikesStream.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  CMakeLists_origin.txt  CalcVal.h  ContainerInterface.h  DeclarationMacros.h  DependedObject.h  DrawGeometryTools.cpp  DrawGeometryTools.h  List.h  MacrosBikes.h  MemoryBikes.cpp  MemoryBikes.h  ObjectSream.h  ObjectStreamMacros.h  PhantomObject.h  PhantomObject_del.h  PlaneAnalysis.cpp  PlaneAnalysis.h  Queue.h  (+18 more)
Bikes/: CMakeLists.txt
Bikes/include/Bikes/: AnyObject.h  ArbitaryObject.h  Assert.h  BGeometry.h  BMath.h  BikeStreamer.h  ByteStream.h  Conversion.h  DeclarationMacros.h  DependedObject.h  EnumStruct.h  Exception.h  Export.h  Geom.h  Geometry.h  MacrosBikes.h  Math.h  Mathem.h  ObjectStreamer.h  ObjectStreamerMacros.h  PhantomObject.h  PtrTools.h  RawArray.h  Signals.h  SmartPtr.h  Testing.h  TypeCollector.h  Types.h
Bikes/src/: Assert.cpp  BasicGeography.cpp  BasicMath.cpp  BikesStream.cpp  ByteStream.cpp  DrawGeometryTools.cpp  Exception.cpp  MemoryBikes.cpp  TestBikes.cpp
Bikes/src/Array/: ByteArray.cpp
Bikes/src/Geom/: Basis.cpp  Point.cpp  (+10 more)
CMakeBikes/: long_CMakeLists.txt  short_CMakeLists.txt
CMakeBikes/CMakeModules/: bikes_messageFuncs.cmake  bikes_readAlien.cmake  bikes_stringFuncs.cmake  bikes_useQt.cmake
CMakeModules/: bikes.cmake  bikes_CMakeListsBody.cmake  bikes_aux.cmake  bikes_checkUsersOptions.cmake  bikes_fileFuncs.cmake  bikes_useQt.cmake  cotire.cmake
OldBikes/: Bikes.w  CMakeLists.txt
OldBikes/src/: DrawGeometryTools.cpp  TrigonometricAngle.cpp
include/Bikes/: AbstractRegistrableType.h  AbstractStreamer.h  AdjacentObject.h  ArrayBikes.h  BasicGeography.h  BasicGeometry.h  BasicMath.h  BikeStreamer.h  BikesStream.h  ByteStream.h  CalcVal.h  DeclarationMacros.h  DependedObject.h  DrawGeometryTools.h  List.h  MacrosBikes.h  MemoryBikes.h  ObjectSream.h  ObjectStream.h  ObjectStreamMacros.h  ObjectStreamer.h  ObjectStreamerMacros.h  PhantomObject.h  Queue.h  QuickArray.h  RawArray.h  SavedCommand.h  SavedCommandsMacros.h  Sequence.h  SequenceElement.h  Signals.h  SmartPtr.h  TestBikes.h  TrigonometricAngle.h  TypeCollector.h  TypeRegister.h  Types.h  ValueSeries.h  types.h
samples/BikesTest/: CMakeLists.txt  CMakeLists_generated.txt  CMakeLists_origin.txt
src/: BasicGeography.cpp  BasicGeometry.cpp  BasicMath.cpp  BikesStream.cpp  ByteStream.cpp  DrawGeometryTools.cpp  MemoryBikes.cpp  Sequence.cpp  SequenceElement.cpp  Signals.cpp  TestBikes.cpp  TrigonometricAngle.cpp  TypeCollector.cpp  TypeRegister.cpp
(+124 files in other folders)
